--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
-.App {
+html {
+  text-align: center;
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +39,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
